portfolio EPs added (#25)
